# bogrep

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust-ci.yml
benches/: fetch.rs
src/: args.rs  cache.rs  client.rs  config.rs  dom.rs  errors.rs  html.rs  json.rs  lib.rs  logger.rs  main.rs  settings.rs  test_utils.rs  utils.rs
src/bookmark_reader/: chrome.rs  chromium.rs  edge.rs  firefox.rs  firefox_compressed.rs  json_reader.rs  mod.rs  plist_reader.rs  safari.rs  simple.rs  source_reader.rs  target_reader.rs  target_reader_writer.rs  target_writer.rs  text_reader.rs
src/bookmarks/: bookmark_manager.rs  bookmark_processor.rs  bookmark_service.rs  mod.rs  source_bookmarks.rs  target_bookmarks.rs
src/cmd/: add.rs  clean.rs  configure.rs  fetch.rs  ignore.rs  import.rs  init.rs  mod.rs  remove.rs  search.rs  sync.rs  update.rs
test_data/: bookmarks_safari_xml.plist  settings.json
test_data/configure/: settings.json
test_data/ignore/: settings.json
test_data/source/: bookmarks_chrome_no_extension  bookmarks_firefox.json  bookmarks_simple.txt  bookmarks_simple_localhost.txt
tests/: common.rs  test_add.rs  test_clean.rs  test_config.rs  test_configure.rs  test_fetch.rs  test_import.rs  test_init.rs  test_remove.rs  test_rename.rs  test_search.rs  test_sync.rs  test_update.rs
