[package]
name = "bogrep"
version = "0.1.5"
edition = "2021"
authors = ["quambene <contact.quambene@gmail.com>"]
description = "Full-text search for bookmarks from multiple browsers"
homepage = "https://github.com/quambene/bogrep"
repository = "https://github.com/quambene/bogrep"
documentation = "https://docs.rs/bogrep"
keywords = ["bookmarks", "full-text-search", "grep", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
license = "Apache-2.0"

[features]
integration-test = []

[dependencies]
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
dirs = "5.0.1"
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["trust-dns"] }
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
html5ever = "0.24.1"
regex = "1.9.1"
colored = "2.0.4"
lz4 = "1.24.0"
similar = "2.2.1"
chrono = "0.4.26"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "fs", "time", "test-util"] }
futures = "0.3.28"
html2md = "0.2.14"
readability = "0.2.0"
async-trait = "0.1.73"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.0"
wiremock = "0.5.19"
